More style edits. Installed grunt-parallel

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 
     <!-- compiled CSS --><% styles.forEach( function ( file ) { %>
     <link rel="stylesheet" type="text/css" href="<%= file %>" /><% }); %>
-
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Orbitron:900'>
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Play:400'>
     <!-- compiled JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <% scripts.forEach( function ( file ) { %>
