--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="<%=appName%>" ng-controller="AppController">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title ng-bind="pageTitle"></title>
@@ -7,17 +8,21 @@
     <!-- font awesome from BootstrapCDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <!-- compiled CSS --><% styles.forEach( function ( file ) { %>
-    <link rel="stylesheet" type="text/css" href="<%= file %>" /><% }); %>
-    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Orbitron:900'>
-    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Play:400'>
-    <!-- compiled JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <% scripts.forEach( function ( file ) { %>
-    <script type="text/javascript" src="<%= file %>"></script><% }); %>
-    <script type="text/javascript">
-			$(document).ready(function() {
+    <!-- compiled CSS -->
+    <% styles.forEach( function ( file ) { %>
+        <link rel="stylesheet" type="text/css" href="<%= file %>" />
+        <% }); %>
+            <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Orbitron:900'>
+            <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Play:400'>
+            <!-- compiled JavaScript -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+            <% scripts.forEach( function ( file ) { %>
+                <script type="text/javascript" src="<%= file %>"></script>
+                <% }); %>
+                    <script type="text/javascript">
+                        $(document).ready(function() {
 				$('#fullpage').fullpage({
+                    fixedElements: 'footer',
 					anchors: ['top', 'details', 'admin', 'play'],
                     sectionsColor: ['rgba(0,0,0,0.2)', 'rgba(215,20,0,.7)', '#1BBC9B', 'rgba(0,191,243,0.5)'],
 					menu: '#menu',
@@ -27,45 +32,96 @@
 				    navigationPosition: 'right'
 				});
 			});
-		</script>
-        <script type="text/javascript" $(window).stellar();></script>
-		<base href="/">
+                    </script>
+                    <base href="/">
 </head>
-<body>
-    		<header style="display:none;">
-			<nav ng-controller="NavController" class="navbar navbar-default">
-				<div class="container-fluid">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					<div class="navbar-header">
-						<button type="button" ng-init="isCollapsed = true" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand" href="#">svend knutsen</a>
-					</div>
-					
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div collapse="isCollapsed" class="navbar-collapse" ng-class="isCollapsed ? 'collapse' : 'in'">
-						<ul class="nav navbar-nav">
-							<li data-menuanchor="firstPage" ui-sref-active="active">
-								<a ui-sref="home" ng-click="isCollapsed = !isCollapsed">Home</a>
-							</li>
-							<li data-menuanchor="secondPage" ui-sref-active="active">
-								<a href="#skills" ng-click="isCollapsed = !isCollapsed">Skills</a>
-							</li>
-							<li data-menuanchor="3rdPage" ui-sref-active="active" ng-click="isCollapsed = !isCollapsed">
-								<a href="#contactme">Contact Me</a>
-							</li>
-						</ul>
-					</div><!-- /.navbar-collapse -->
-				</div><!-- /.container-fluid -->
-			</nav>
-		</header>
-		<div id="fullpage" ui-view="main"></div>
 
-    <footer class="container">
+<body>
+    <div id="fullpage" class="homeClass">
+        <div style="position:fixed;top:10px;left:10px;height:80px;">
+            <p>{{server.players}} / {{server.maxplayers}} Players Online</p>
+        </div>
+        <div class="section active" id="section0">
+            <div class="container" style="text-align:center;">
+                <h1 ng-if="server.is_online === '1'" class="text-shadow hidden-xs"><a class="green h1" href="steam://connect/64.79.98.100:7808" target="_blank">64.79.98.100:7807</a></h1>
+                <img src="http://i.imgur.com/T71GvLX.png" class="img-responsive" style="position:relative;margin-top:-145px;z-index:-1;">
+                <h2 ng-if="server.is_online === '1'" ng-bind="server.hostname"></h2>
+                <h2 ng-if="server.is_online !== '1'">We're currently down for maintenance. We'll be back up soon.</h2>
+                <blink style="position:absolute;bottom:42px;"><i class="fa fa-5x fa-angle-double-down"></i></blink>
+
+            </div>
+        </div>
+        <div class="section" id="section1">
+            <div class="container visible-xs">
+                <div class="jumbotron transparent details">
+                    <h1>Details</h1>
+                   <ul style="margin-left:20px; ">
+                    <li ng-repeat="item in someList "><h3>{{item}}</h3></li>
+                </ul>
+            </div>
+        </div>
+        <div class="slide hidden-xs">
+            <div class="container">
+                <h1>Details</h1>
+                <div class="col-xs-12 col-md-6">
+                    <h2>
+                    Settings:
+                    <ul>
+                        <li ng-repeat="item in someList ">{{item}}</li>
+                    </ul>
+                    </h2>
+                    <br>
+                    <a ng-if="server.is_online==='1' " class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808
+                    " target="_blank "><i class="fa fa-2x fa-steam-square "></i><span style="font-size:26px; "> Play Now!</span></a><p>* Steam must be running</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="/assets/dino.png " class="img-responsive ">
+                </div>
+            </div>
+        </div>
+        <div class="slide hidden-xs" data-anchor="map" data-slideindex="2">
+            <div class="container ">
+                <div class="col-xs-12 col-md-6 v-center">
+                    <h1 style="margin-top:410px;font-size:3.5em;">Resource Map - The Island</h1>
+                    <p>CLICK ON MAP TO ENLARGE</p>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <ul>
+                      <li ng-repeat="image in images " style="list-style:none;">
+                        <a ng-click="openLightboxModal($index) ">
+                           <img ng-src="{{image.thumbUrl}} " class="img-responsive shadow ">
+                        </a>
+                      </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section " id="section2 ">
+        <div class="container ">
+            <div class="jumbotron transparent ">
+            <h1>about the admin <i class="fa fa-terminal "></i></h1>
+            <h3>I like to make things... like this website. <br>
+            I also like games... and building stuff.<br>
+            Let's build things and play ARK.</h3>
+            </div>
+        </div>
+    </div>
+    <div id="section3 " class="section ">
+        <div class="container ">
+            <div class="jumbotron transparent ">
+            <h1>play <i class="fa fa-terminal "></i></h1>
+            <br>
+            <h2 style="font-size:3.5em;margin-top:20px; ">While Steam is running...<br>click this button to play.</h2>
+            <br>
+            <a ng-if="server.is_online==='1' " class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808
+                    " target="_blank "><i class="fa fa-4x fa-steam-square "></i><span style="font-size:46px; "> Play Now!</span></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <footer class="container ">
         (c) <%= date %> <%= author %>
     </footer>
 </body>
