--- a/src/index.html
+++ b/src/index.html
@@ -55,74 +55,99 @@
             <div class="container visible-xs">
                 <div class="jumbotron transparent details">
                     <h1>Details</h1>
-                   <ul style="margin-left:20px; ">
-                    <li ng-repeat="item in someList "><h3>{{item}}</h3></li>
-                </ul>
+                    <ul style="margin-left:20px; ">
+                        <li ng-repeat="item in someList ">
+                            <h3>{{item}}</h3></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="slide hidden-xs">
-            <div class="container">
-                <h1>Details</h1>
-                <div class="col-xs-12 col-md-6">
-                    <h2>
+            <div class="slide hidden-xs">
+                <div class="container">
+                    <h1>Details</h1>
+                    <div class="col-xs-12 col-md-6">
+                        <h2>
                     Settings:
                     <ul>
                         <li ng-repeat="item in someList ">{{item}}</li>
                     </ul>
                     </h2>
-                    <br>
-                    <a ng-if="server.is_online==='1' " class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808
-                    " target="_blank "><i class="fa fa-2x fa-steam-square "></i><span style="font-size:26px; "> Play Now!</span></a><p>* Steam must be running</p>
+                        <br>
+                        <a ng-if="server.is_online==='1' " class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808
+                    " target="_blank "><i class="fa fa-2x fa-steam-square "></i><span style="font-size:26px; "> Play Now!</span></a>
+                        <p>* Steam must be running</p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="/assets/dino.png " class="img-responsive ">
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <img src="/assets/dino.png " class="img-responsive ">
+            </div>
+            <div class="slide hidden-xs" data-anchor="map" data-slideindex="2">
+                <div class="container ">
+                    <div class="col-xs-12 col-md-6 v-center">
+                        <h1 style="margin-top:410px;font-size:3.5em;">Resource Map - The Island</h1>
+                        <p>CLICK ON MAP TO ENLARGE</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <ul>
+                            <li ng-repeat="image in images " style="list-style:none;">
+                                <a ng-click="openLightboxModal($index) ">
+                                    <img ng-src="{{image.thumbUrl}} " class="img-responsive shadow ">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="slide hidden-xs" data-anchor="version" data-slideindex="3">
+                <div class="container ">
+                    <div class="col-xs-12">
+                    <div class="col-xs-12 col-md-6 v-center">
+                        <h1 style="margin-top:410px;font-size:3.5em;">Version Information</h1>
+                        <h3>Patches and updates get installed regularly in an effort to always be running the latest release. Those devs work their butts off to improve the game so I'll pass along the goodies as they come.</h3>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <h2>
+                        <ul>
+                            <li>
+                                Current Release: {{version.current}}</li>
+                            <li>
+                                Upcoming Release: {{version.upcoming.version}}, ETA {{version.upcoming.status}}</li>
+                        </ul>
+                        </h2>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="slide hidden-xs" data-anchor="map" data-slideindex="2">
+        <div class="section " id="section2 ">
             <div class="container ">
-                <div class="col-xs-12 col-md-6 v-center">
-                    <h1 style="margin-top:410px;font-size:3.5em;">Resource Map - The Island</h1>
-                    <p>CLICK ON MAP TO ENLARGE</p>
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    <ul>
-                      <li ng-repeat="image in images " style="list-style:none;">
-                        <a ng-click="openLightboxModal($index) ">
-                           <img ng-src="{{image.thumbUrl}} " class="img-responsive shadow ">
-                        </a>
-                      </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="section " id="section2 ">
-        <div class="container ">
-            <div class="jumbotron transparent ">
-            <h1>about the admin <i class="fa fa-terminal "></i></h1>
-            <h3>I like to make things... like this website. <br>
+                <div class="jumbotron transparent ">
+                    <h1>about the admin <i class="fa fa-terminal "></i></h1>
+                    <h3>I like to make things... like this website. <br>
             I also like games... and building stuff.<br>
             Let's build things and play ARK.</h3>
+                </div>
             </div>
         </div>
-    </div>
-    <div id="section3 " class="section ">
-        <div class="container ">
-            <div class="jumbotron transparent ">
-            <h1>play <i class="fa fa-terminal "></i></h1>
-            <br>
-            <h2 style="font-size:3.5em;margin-top:20px; ">While Steam is running...<br>click this button to play.</h2>
-            <br>
-            <a ng-if="server.is_online==='1' " class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808
+        <div id="section3 " class="section ">
+            <div class="container ">
+                <div class="jumbotron transparent ">
+                    <h1>play <i class="fa fa-terminal "></i></h1>
+                    <br>
+                    <h2 style="font-size:3.5em;margin-top:20px; ">While Steam is running...<br>click this button to play.</h2>
+                    <br>
+                    <a ng-if="server.is_online==='1' " class="btn btn-lg btn-default " href="steam://connect/64.79.98.100:7808
                     " target="_blank "><i class="fa fa-4x fa-steam-square "></i><span style="font-size:46px; "> Play Now!</span></a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <footer class="container ">
-        (c) <%= date %> <%= author %>
+        (c)
+        <%= date %>
+            <%= author %>
     </footer>
 </body>
+
 </html>
