--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <div class="section active" id="section0">
             <div class="container" style="text-align:center;">
                 <h1 ng-if="server.is_online === '1'" class="text-shadow hidden-xs"><a class="green h1" href="steam://connect/64.79.98.100:7808" target="_blank">64.79.98.100:7807</a></h1>
-                <img src="http://i.imgur.com/T71GvLX.png" class="img-responsive" style="position:relative;margin-top:-145px;z-index:-1;">
+                <img src="http://res.cloudinary.com/isvend/image/upload/v1452907357/logo_k8dynz.png" class="img-responsive" style="position:relative;margin-top:-145px;z-index:-1;">
                 <h2 ng-if="server.is_online === '1'" ng-bind="server.hostname"></h2>
                 <h2 ng-if="server.is_online !== '1'">We're currently down for maintenance. We'll be back up soon.</h2>
                 <blink style="position:absolute;bottom:42px;"><i class="fa fa-5x fa-angle-double-down"></i></blink>
