--- a/src/index.html
+++ b/src/index.html
@@ -156,15 +156,15 @@
                             <div class=" chatText">
 
                                 <p ng-repeat="message in messages">
-                                    {{message.user}}: <span style="color:#ccff99;">{{message.text}}</span>
+                                    {{message.alias}}: <span style="color:#ccff99;">{{message.text}}</span>
                                 </p>
 
                             </div>
                             <form>
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <div class="input-group-addon">Survivor </div>
-                                        <input type="text" class="form-control" id="Name" placeholder="Your Name" ng-model="newmessage.user">
+                                        <div class="input-group-addon">Alias </div>
+                                        <input class="form-control" id="Name" placeholder="Logged in as {{authData.password.email}}..." ng-model="newmessage.alias"></input>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -173,7 +173,7 @@
                                         <textarea rows="3" class="form-control" id="Text" placeholder="Type your message" ng-model="newmessage.text"></textarea>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-default" onclick="this.form.reset();" ng-click="inserisci(newmessage)">Submit</button>
+                                <button type="submit" class="btn btn-default" onclick="" ng-click="inserisci(newmessage); reset(eraseText);">Submit</button>
                             </form>
                         </div>
                     </div>
