Temp disabled sign up function

--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,7 @@
                                     <input type="password" class="form-control" placeholder="password" ng-model="password" />
                                 </div>
                                 <button type="submit" class="btn btn-default" ng-click="login()">Sign In / Sign Up</button>
+                                <p>* Sign Up function is currently disabled. You can request an account via email <a style="color:#ccc;" href="mailto:admin@nattypark.info">admin<i class="fa fa-at"></i>nattypark.info</a></p>
                             </fieldset>
                         </form>
                         <div ng-show="authData" ng-controller="chatCtrl" class="chatArea row">
