fixed missing bottom section

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                         $(document).ready(function() {
 				$('#fullpage').fullpage({
                     fixedElements: 'footer',
-					anchors: ['top', 'details', 'admin', 'play'],
+					anchors: ['top', 'details', 'admin', 'steam'],
                     sectionsColor: ['rgba(0,0,0,0.2)', 'rgba(215,20,0,.7)', '#1BBC9B', 'rgba(0,191,243,0.5)'],
 					menu: '#menu',
 					scrollingSpeed: 900,
@@ -184,7 +184,7 @@
                 </div>
             </div>
         </div>
-        <div class="section " id="section2">
+        <div class="section" id="section2">
             <div class="container ">
                 <div class="jumbotron transparent ">
                     <h1>about the admin <i class="fa fa-terminal "></i></h1>
@@ -194,8 +194,8 @@
                 </div>
             </div>
         </div>
-        <div ng-if="server.is_online==='1' " id="section3" class="section hidden-xs">
-            <div class="container ">
+        <div id="section3" class="section hidden-xs">
+            <div ng-if="server.is_online==='1' " class="container ">
                 <div class="jumbotron transparent ">
                     <h1>play <i class="fa fa-terminal "></i></h1>
                     <br>
